magit-ls-files with K.

--- a/README.org
+++ b/README.org
@@ -212,6 +212,7 @@ status.showUntrackedFiles normal=)
 | ~TAB~    | Complete anything                                |
 | or       | Fold/unfold functions/regions (if code indented) |
 | ~C-f~    | GitFlow from within Magit                        |
+| ~K~      | =git ls-files= from within Magit                 |
 
 
 
